deploymnet.yaml
# Deployment for the Slurm Chat application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slurm-chat-deployment
  namespace: slurm-chat
  labels:
    app: slurm-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slurm-chat
  template:
    metadata:
      labels:
        app: slurm-chat
    spec:
      containers:
      - name: slurm-chat
        image: rkhoja/alliance-chat:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
# Service to expose the application internally
apiVersion: v1
kind: Service
metadata:
  name: slurm-chat-service
  namespace: slurm-chat
spec:
  selector:
    app: slurm-chat
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  type: ClusterIP
---
# Ingress for public access with SSL
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slurm-chat-ingress
  namespace: slurm-chat
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true" # Explicitly enable TLS
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - chat.cluster.paice-ua.com
    secretName: chat-cluster-paice-ua-com-tls # Matches Certificate secretName
  rules:
  - host: chat.cluster.paice-ua.com # Only responds to this hostname
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: slurm-chat-service
            port:
              number: 8000
